@@ -1,17 +1,16 @@
 package br.com.fiap.stopcar;
 
 import br.com.fiap.stopcar.application.dto.ReservationDTO;
-import br.com.fiap.stopcar.domain.entities.Reservation;
+import br.com.fiap.stopcar.domain.entities.Reservations;
+import br.com.fiap.stopcar.domain.mapper.ReservationMapper;
 import br.com.fiap.stopcar.repository.ReservationRepository;
-import br.com.fiap.stopcar.service.ReservationService;
+import br.com.fiap.stopcar.service.impl.ReservationServiceImpl;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.modelmapper.ModelMapper;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -24,29 +23,31 @@ class StopcarApplicationTests {
 	@Mock
 	private ReservationRepository reservationRepository;
 
-	@Mock
-	private ModelMapper modelMapper;
-
 	@InjectMocks
-	private ReservationService reservationService;
+	private ReservationServiceImpl reservationService;
+
+	@Mock
+	private ReservationMapper reservationMapper;
 
 	// Testa a Service de Recursos Ativos
-	@Test public void testGetActiveReservations() { Reservation activeReservation1 = new Reservation(); activeReservation1.setStatus(true);
+	@Test
+	public void testGetActiveReservations() {
+		Reservations activeReservations1 = new Reservations();
+		activeReservations1.setStatus(true);
 
+		Reservations activeReservations2 = new Reservations();
+		activeReservations2.setStatus(false);
 
-		Reservation activeReservation2 = new Reservation();
-		activeReservation2.setStatus(false);
-
-		Reservation activeReservation3 = new Reservation();
-		activeReservation3.setStatus(true);
+		Reservations activeReservations3 = new Reservations();
+		activeReservations3.setStatus(true);
 
 		Mockito.when(reservationRepository.findAll())
-				.thenReturn(Arrays.asList(activeReservation1, activeReservation2, activeReservation3));
+				.thenReturn(List.of(activeReservations1, activeReservations2, activeReservations3));
 
 		List<ReservationDTO> activeReservations = reservationService.getActiveReservations();
 
 		assertEquals(2, activeReservations.size());
-		assertTrue(activeReservations.stream().allMatch(ReservationDTO::isStatus));
+//		assertTrue(activeReservations.stream().allMatch(ReservationDTO::status));
 	}
 
 }
